added the ansible-vault before pushing to github following best practices

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,5 @@
 [defaults]
-interpreter_python=/usr/bin/python3.12
-remote_user=azureuser
+interpreter_python = /usr/bin/python3.12
+remote_user = azureuser
+vault_password_file = .vault_pass
+host_key_checking = False
