--- a/roles/mysql/vars/main.yml
+++ b/roles/mysql/vars/main.yml
@@ -5,6 +5,6 @@ mysql_root_password: "rabin123"
 db_admin_password: "rabin123"
 app_user_password: "rabin123"
 
-db_admin_user: "ansible_admin"
-app_db_name: "ansible_db"
-app_user: "ansible_user"
+db_admin_user: "{{ db_admin_user | default('ansible_admin') }}"
+app_db_name: "{{ app_db_name | default('ansible_db') }}"
+app_user: "{{ app_user | default('ansible_user') }}"
